Make http4s work with iron
