# api/src/com/example/petstore/api/models/Address.scala
@@ -2,13 +2,19 @@ package com.example.petstore.api.models
 
 import java.time.*
 import java.util.UUID
-import org.typelevel.jawn.ast.JValue
-import ba.sake.tupson.*
-import ba.sake.validson.Validator
+import io.circe.{Codec, Json}
+import io.circe.derivation.{Configuration, ConfiguredCodec, ConfiguredEnumCodec}
 
 case class Address(
   street: Option[String],
   city: Option[String],
   state: Option[String],
-  zip: Option[String]
-) derives JsonRW
+  zip: Option[String], street2: Option[String]
+)
+
+object Address {
+  given Configuration = Configuration.default
+  given Codec[Address] = ConfiguredCodec.derived
+  val x = ""
+}
+
